--- a/tasks.html
+++ b/tasks.html
@@ -15,8 +15,9 @@
 <body>
     <nav class="navbar">
         <div class="nav-items">
+            <img class="nav-brand" src="karyam_icon128.png">
             <h2>Tasks list</h2>
-            <button class="edit-button" id="add-new-task" title="Whoa! a new task">New task</button>
+            <button class="edit-button" id="add-new-task" title="Whoa! a new task">Add New</button>
         </div>
         
     </nav>
